--- a/style.css
+++ b/style.css
@@ -6,3 +6,39 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: linear-gradient(#111317 50%, #675afe 50%);
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
+}
+
+.wrapper h2 {
+    color: #675afe;
+    font-size: 46px;
+}
+
+.wrapper .logos {
+    margin-left: 15px;
+}
+
+.logos img {
+    opacity: 0.3;
+    margin: 0 7px;
+    transition: opacity 0.5s ease;
+}
+
+.logs img:last-child {
+    margin-right: 0px;
+}
